--- a/default.css
+++ b/default.css
@@ -29,7 +29,7 @@
   //背景画像
   body{
       background-color: #ff6600;
-      background-image:url(/img/~~~~~~.png);  //画像リンク
+      background-image:url(/img/kitunemura10.jpg);  //画像リンク
       background-repeat:repeat-x;
   }
 */
