--- a/default.css
+++ b/default.css
@@ -20,21 +20,21 @@ h1{
   
   //id
   #lead{
-    vorder-top:#ff6600;
+    border-top:#ff6600;
     
     text-align:center;
   }  
   
   //class1
   .greeting{
-    bordeer-top:#ff6600 1px dotted;
+    border-top:#ff6600 1px dotted;
     
     text-align:center;
   }
   
   //class2
   p.greeting{
-    vorder-top:#ff6600 1px dotted;
+    border-top:#ff6600 1px dotted;
     
     text-align:center;
   }
