--- a/css/default.css
+++ b/css/default.css
@@ -3,7 +3,7 @@
 
 body{
   background-color: #3399cc;
-  background-image:url(/img/kitunemura10.jpg);
+  background-image:url(../img/kitunemura10.jpg);
   background-repeat:no-repeat;
   background-position:right center;
 
